<resources>
    <string name="app_name">My MLA</string>
    <string name="action_settings">Credits</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_out">SignOut</string>
    <string name="title_activity_report">Submit your problem</string>
    <string name="title_activity_status_detail">My Reports</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_credits">Credits</string>

    <!-- "Report Issue Page" Strings -->
    <string name="etName">Name</string>
    <string name="etMobile">Mobile</string>
    <string name="etPlace">Place</string>
    <string name="etSubject">Subject</string>
    <string name="etDepartment">Department</string>
    <string name="etProblem">Problem</string>
    <string name="btnAttachImage">Attach</string>
    <string name="btnSubmitIssue">Submit</string>
    <string name="status">Status</string>

    <!-- "department_list_view" Strings -->
    <string name="lvDepartment">Select Department</string> <!--title for the department dialog box-->

    <!-- "taluka_list_view" Strings -->
    <string name="lvTaluka">Select Taluka</string>
    <string name="title_activity_reports">Submit your problem</string>
    <string name="title_activity_contacts">Biography</string> <!--title for the title dialog box-->

    <string name="btnImageAttachment">View Attachment</string>
    !-- "Report Details" Strings -->

    <string name="problem_details">Problem Details:</string>
    <string name="lbl_place">Place:</string>
    <string name="lbl_department"> Department:</string>
    <string name="lbl_name">Name:</string>

    <string name="alert_success_msg">Your report has been submitted. We will respond with in 15 days.</string>\

    <string name="alert_name_mla">V Satish Kumar, MLA, Husnabad.</string>

</resources>
