<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:padding="10dp"
    tools:context="com.mymla.development.hsb.ReportsActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/rounded_edittext"
        android:singleLine="true"
        android:lines="1"

        android:layout_marginBottom = "15dp"/>


    <EditText
        android:hint="@string/etMobile"
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:singleLine="true"
        android:lines="1"

        android:layout_marginBottom = "15dp"/>


    <EditText
        android:hint="@string/etDepartment"
        android:id="@+id/editTextDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:singleLine="true"
        android:editable="false"
        android:textIsSelectable="false"
        android:focusableInTouchMode="false"
        android:layout_marginBottom = "15dp"/>

    <EditText
        android:hint="@string/etPlace"
        android:id="@+id/editTextPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:singleLine="true"
        android:lines="1"

        android:layout_marginBottom = "15dp"/>


    <EditText
        android:hint="@string/etSubject"
        android:id="@+id/editTextSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:singleLine="true"
        android:lines="1"

        android:layout_marginBottom = "15dp" />

    <EditText
        android:id="@+id/editTextProblem"
        android:hint="@string/etProblem"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:gravity="top|left"
        android:maxLines="10"
        android:lines="8"
        android:scrollbars="vertical"
        android:background="@drawable/rounded_edittext"
        android:layout_marginBottom = "5dp"/>
  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAttachImage"
            android:id="@+id/buttonImage"
            android:gravity="left|center_vertical" />

        <TextView android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/imageName"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/buttonImage"
            android:layout_toEndOf="@+id/buttonImage"
            android:layout_marginLeft="10dp"/>
      <Button android:visibility="gone"
          android:id="@+id/btnImageAttachment"
          android:text="@string/btnImageAttachment"
          android:layout_centerVertical="true"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@+id/buttonImage"
          android:layout_toEndOf="@+id/buttonImage"
          android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:text="@string/btnSubmitIssue"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content" />


</LinearLayout>
